k8s/apps/argocd/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.k8s.vicio.ovh`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    certResolver: letsencrypt
